# Local-agents-rag-system

./: .gitignore  README.md  launcher.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/cpu/: cache_manager.py  rag_manager.py
app/gpu/: inference_engine.py
app/orchestrator/: advanced_engine.py  agent_prompts.py  battle_manager.py  workflow_manager.py
app/ui/: chainlit_app.py  streamlit_app.py
src/: index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  embed_test.json  ollama_test.json  run_error.txt  tauri.conf.json  test_arena.ps1  test_ollama.ps1  test_swarm.ps1
src-tauri/capabilities/: default.json
src-tauri/src/: arena.rs  db.rs  inference.rs  lib.rs  prompts.rs  rag.rs  workflow.rs
src/src/: App.css  App.tsx  index.css  main.tsx  types.ts
src/src/components/: ModelParamsPanel.tsx  ModelSelector.tsx  Sidebar.tsx
src/src/pages/: Arena.tsx  Chat.tsx  Dashboard.tsx  Library.tsx  Swarm.tsx  TestingArena.tsx  TestingArena2.tsx
tests/: reproduce_hang.py  verify_persistence.py  verify_poetiq.py
