[project]
name = "local-agents-rag-system"
version = "0.1.0"
description = "Local RAG System with specialized agents and CPU/GPU separation"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.32.0",
    "chromadb>=0.4.24",
    "ollama>=0.1.6",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",
    "sentence-transformers>=2.5.1",
    "psutil>=5.9.8",
    "gputil>=1.4.0",
    "pypdf>=3.17.0",
    "chainlit>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
