[package]
name = "app"
version = "0.1.0"
description = "Local Agents — Tauri/Rust desktop app for local LLM orchestration with RAG"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.43.0", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1.13.1", features = ["v4"] }
chrono = "0.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
sysinfo = "0.35"
